--- a/src/Components/Product/right.css
+++ b/src/Components/Product/right.css
@@ -75,5 +75,20 @@
     color:#10A728;
     font-Size:18px;
     text-Decoration:underline;
-    margin-left: 40px;
+    margin-left: 10px;
+    margin-top: 10px;
 }
+
+#ell{
+    margin-left: 30px; 
+}
+
+#ell img{
+    width: 28px;
+    margin-bottom: 1px;
+    margin-left: -20px;
+    margin-top: 4px;
+    height: 23px;
+}
+
+
