--- a/src/Components/item.css
+++ b/src/Components/item.css
@@ -1,22 +1,72 @@
+.wdh{
+    width: 18rem;
+}
 
 .item{
     display: flex;
-    padding-top: 50px;
-    padding-left: 50px;
-    margin-left: 50px;
+    justify-content: space-between;
 }
 
 .simple{
-    margin-left: 50px;
+    margin-left: 30px;
+    margin-right: 30px;
+    
+}
+
+.prm{
+    color:#868686;
+    font-Size: 14.6px;
 }
 
 .white{
     width: 300px;
     height: 450px;
     background-color: white;
-    border: 2px solid red;
-    /* box-shadow: 10px 10px 10px red; */
-    margin-left: 10px;
-    padding-left: 50px;
-    padding-top: 50px;
+    text-align: center;
+    box-shadow: 1px 1px 5px black;
+    padding-top: 30px;
+    border-radius: 10px;
 }
+
+.five{
+    color:#C6AC8F;
+    font-Size: 30px;
+}
+
+.sp{
+    font-size: 35px;
+    margin-bottom: 10px;
+    font-family: 'Open Sans', sans-serif;
+    letter-spacing: 1px;
+}
+
+.cp{
+    font-Size: 14.4px;
+}
+
+.arm{
+    font-size: 18px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: bolder;
+    letter-spacing: 1px;
+}
+
+.button{
+    background-Color:#D9D9D9;
+    text-decoration: none;
+    color: black;
+    padding: 10px;
+    border-radius: 10px;
+    font-family: "Poppins";
+    font-weight: bolder;
+    display: block;
+    width: 150px;
+   margin-left: 72px;
+   margin-top: 10px;
+}
+
+.off{
+    background-color: black;
+    color: white;
+}
+
